--- a/packages/@weex/plugins/debug/frontend/src/components/navbar/navbar.html
+++ b/packages/@weex/plugins/debug/frontend/src/components/navbar/navbar.html
@@ -5,7 +5,7 @@
   <b-navbar-nav>
     <b-nav-item class="wx-navbar-item title">{{title}}</b-nav-item>
   </b-navbar-nav>
-  <b-navbar-nav class="ml-auto">
+  <b-navbar-nav class="ml-auto" style="display: none;">
     <template></template>
     <b-nav-item class="wx-navbar-item operate" @click="toggleBundlesModal()" :class="{'active': bundleSetting}">
       <span class="iconfont icon-qrcode-scan">
