--- a/packages/@weex/plugins/debug/frontend/src/components/navbar/navbar.html
+++ b/packages/@weex/plugins/debug/frontend/src/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <b-navbar toggleable="md" fixed="top" class="wx-navbar">
-  <b-navbar-brand class="wx-navbar-brand">
+  <!-- <b-navbar-brand class="wx-navbar-brand">
     <a href="/" class="logo"></a>
-  </b-navbar-brand>
+  </b-navbar-brand> -->
   <b-navbar-nav>
     <b-nav-item class="wx-navbar-item title">{{title}}</b-nav-item>
   </b-navbar-nav>
