--- a/packages/@weex/plugins/debug/frontend/src/views/weex/weex.html
+++ b/packages/@weex/plugins/debug/frontend/src/views/weex/weex.html
@@ -68,12 +68,7 @@
         </div>
         <div class="wx-debug-weex-col info" style="flex: 1;">
           <div class="label">{{$t('weexDebugPage.appInfo')}}</div>
-          <span :title="userAgent" style="width:500px">{{userAgent}}</span>
-        </div>
-        <div class="wx-debug-weex-col info" style="flex: 1;">
-          <div class="label" :title="appVersion">{{$t('weexDebugPage.sdkVersion')}}</div>
-          <span>{{appVersion}}
-          </span>
+          <span :title="userAgent" style="width:100%">{{userAgent}}</span>
         </div>
         <div class="wx-debug-weex-col switch" style="display: none;">
           <div class="label">{{$t('weexDebugPage.jsDebug')}}</div>
