--- a/packages/@weex/plugins/debug/frontend/src/views/weex/weex.html
+++ b/packages/@weex/plugins/debug/frontend/src/views/weex/weex.html
@@ -64,7 +64,7 @@
           <div class="label">{{$t('weexDebugPage.appInfo')}}</div>
           <span :title="userAgent" style="width:100%">{{userAgent}}</span>
         </div>
-        <div class="wx-debug-weex-col switch">
+        <div class="wx-debug-weex-col switch" style="display: none;">
           <div class="label">{{$t('weexDebugPage.screencast')}}</div>
           <toggle-button :value="screencastStatus" @change="handleScreencast($event)" color="#f37327" :sync="true" :width="50" :height="24"
             :labels="true" />
@@ -136,7 +136,7 @@
   <b-modal hide-backdrop v-model="modalShow" size="lg" hide-footer hide-title class="wx-debug-weex-modal">
       <div>
         <monacoeditor
-        v-if="editorShow" 
+        v-if="editorShow"
         height = "500"
         theme = "vs"
         :srcPath = "editorSrcPath"
